--- a/src/profil.html
+++ b/src/profil.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Polit'IF</title>
-
+    <link re<link rel="icon" type="image/svg+xml" href="img/logo.svg" />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/typography.css" />
     <link rel="stylesheet" href="styles/colors.css" />
@@ -19,13 +19,12 @@
   <body>
     <header>
       <div class="brand">
-        <h1><a href="index.html">Polit’IF</a></h1>
+        <a href="/" class="logo" title="Retourner à l'accueil">
+          <img src="img/logo.svg" alt="" />
+          <h1>Polit’IF</h1>
+        </a>
         <p class="h3">Le moteur de recherche de la politique française</p>
       </div>
-
-      <nav>
-        <a href="index.html">Recherche</a>
-      </nav>
     </header>
 
     <main class="sheet profil colonnes">
