--- a/src/profil.html
+++ b/src/profil.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Polit'IF</title>
-    <link re<link rel="icon" type="image/svg+xml" href="img/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="img/logo.svg" />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/typography.css" />
     <link rel="stylesheet" href="styles/colors.css" />
