--- a/src/parti.html
+++ b/src/parti.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="brand">
-        <a href="/" class="logo" title="Retourner à l'accueil">
+        <a href="index.html" class="logo" title="Retourner à l'accueil">
           <img src="img/logo.svg" alt="" />
           <h1>Polit’IF</h1>
         </a>
