--- a/src/profil.html
+++ b/src/profil.html
@@ -86,7 +86,7 @@
           </div>
         </dl>
 
-        <div data-contains-slot="partis">
+        <div data-contains-slot="profil-liste-partis">
           <h3>Partis politiques</h3>
           <ul data-key="profil-liste-partis"></ul>
         </div>
