petits changement d'affichage site web + fix contains-slot

--- a/src/parti.html
+++ b/src/parti.html
@@ -74,9 +74,9 @@
             <dt>Idéologie(s) politique(s)</dt>
             <dd data-key="ideologies"></dd>
           </div>
-          <div data-contains-slot="site">
+          <div data-contains-slot="site-web">
             <dt>Site web</dt>
-            <dd><a data-key="site-web" href=""></a></dd>
+            <dd data-key="site-web"></dd>
           </div>
           <div data-contains-slot="siege">
             <dt>Siège</dt>
