--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,11 @@
             <h3>Partis</h3>
             <div data-key="resultats-partis"></div>
           </div>
+
+          <div class="recherche-categorie" data-contains-slot="resultats-ideologies">
+            <h3>Idéologies</h3>
+            <div data-key="resultats-ideologies"></div>
+          </div>
         </div>
       </div>
 
