--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
   <body>
     <header>
       <div class="brand">
-        <span class="logo">
+        <a href="index.html" class="logo" title="Retourner à l'accueil">
           <img src="img/logo.svg" alt="" />
           <h1>Polit’IF</h1>
-        </span>
+        </a>
         <p class="h3">Le moteur de recherche de la politique française</p>
       </div>
     </header>
