--- a/src/parti.html
+++ b/src/parti.html
@@ -76,7 +76,7 @@
           </div>
           <div data-contains-slot="site">
             <dt>Site web</dt>
-            <dd><a data-key="site-web" href=""></a></dd>
+            <dd><a data-key="site-web"></a></dd>
           </div>
           <div data-contains-slot="siege">
             <dt>Siège</dt>
@@ -88,7 +88,7 @@
 
     <footer>
       <div>
-        <b>Source des données : "</b><a data-key="urlwikidata"></a>" sur Wikidata
+        <b>Source des données :</b> <a data-key="urlwikidata"></a> sur Wikidata
       </div>
       <div class="drapeau-francais">
         <span class="sr-only">Drapeau français</span>
