--- a/src/profil.html
+++ b/src/profil.html
@@ -99,7 +99,7 @@
 
     <footer>
       <div>
-        <b>Source des données : "</b><a data-key="urlwikidata"></a>" sur Wikidata
+        <b>Source des données :</b> <a data-key="urlwikidata"></a> sur Wikidata
       </div>
       <div class="drapeau-francais">
         <span class="sr-only">Drapeau français</span>
