--- a/src/ideologie.html
+++ b/src/ideologie.html
@@ -50,7 +50,7 @@
 
     <footer>
       <div>
-        <b>Source des données :</b> <a data-key="urlwikidata"></a> sur Wikidata
+        <b>Source des données :</b> <span data-key="urlwikidata"></span> sur Wikidata
       </div>
       <div class="drapeau-francais">
         <span class="sr-only">Drapeau français</span>
