--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
         </a>
         <p class="h3">Le moteur de recherche de la politique française</p>
       </div>
+      <nav>
+        <a href="presidents.html">Présidents français depuis 1945</a>
+      </nav>
+
     </header>
 
     <main class="recherche">
