--- a/src/presidents.html
+++ b/src/presidents.html
@@ -26,37 +26,8 @@
     </header>
 
     <div class="container">
-      <ul>
-        <li>
-          <div>
-            <aside class="home-cards"></aside>
-          </div>
-          <span class="number">
-            <span>1947</span>
-            <span>1954</span>
-          </span>
-        </li>
-        <li>
-          <div>
-            <div class="title">René Coty</div>
-            <div class="info">Let's make coolest things in javascript</div>
-          </div>
-          <span class="number">
-            <span>1954</span>
-            <span>1959</span>
-          </span>
-        </li>
-        <li>
-          <div>
-            <div class="title">Charles de Gaulle</div>
-            <div class="info">Let's make coolest things in css</div>
-            <div class="type">Review</div>
-          </div>
-          <span class="number">
-            <span>1959</span>
-            <span>1969</span>
-          </span>
-        </li>
+      <ul id="timeline">
+
       </ul>
     </div>
 
@@ -70,18 +41,7 @@
     <script src="scripts/Slots.js"></script>
     <script src="scripts/utils.js"></script>
     <script src="scripts/requetes.js"></script>
-    <script src="scripts/accueil.js"></script>
-    <script src="scripts/recherche.js"></script>
-
-    <script>
-      homecards([
-        featuredTopic(
-          'Q3052772', 'Emmanuel Macron', 'profil',
-          'Q23731823', 'La République en marche', 'parti',
-          'http://commons.wikimedia.org/wiki/Special:FilePath/Emmanuel%20Macron%20%2837374335081%29%20%28cropped%29.jpg?width=200px'
-        )
-      ])
-    </script>
+    <script src="scripts/presidents.js"></script>
   </body>
 
 </html>
