timeline avec images

--- a/src/presidents.html
+++ b/src/presidents.html
@@ -25,8 +25,8 @@
       </div>
     </header>
 
-    <div class="container">
-      <ul id="timeline">
+    <div class="sheet timeline-container">
+      <ul class="timeline" id="timeline">
 
       </ul>
     </div>
