--- a/src/presidents.html
+++ b/src/presidents.html
@@ -26,6 +26,7 @@
     </header>
 
     <div class="sheet timeline-container">
+      <h2 class="timeline-title">Présidents français depuis 1947</h2>
       <ul class="timeline" id="timeline">
 
       </ul>
