--- a/src/presidents.html
+++ b/src/presidents.html
@@ -27,9 +27,12 @@
 
     <div class="sheet timeline-container">
       <h2 class="timeline-title">Présidents français depuis 1947</h2>
-      <ul class="timeline" id="timeline">
-
-      </ul>
+      <ul class="timeline" id="timeline"></ul>
+      <div class="timeline-spinner-container" id="spinner">
+        <svg class="timeline-spinner" viewBox="0 0 50 50">
+          <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+        </svg>
+      </div>
     </div>
 
 
