--- a/src/parti.html
+++ b/src/parti.html
@@ -33,6 +33,10 @@
         <div data-key="description"></div>
 
         <br />
+        <div data-contains-slot="présidents">
+          <h3>Tête du parti</h3>
+          <div data-key="présidents"></div>
+        </div>
         <div data-contains-slot="membres-importants">
           <h3>Personnalités notables</h3>
           <div data-key="membres-importants"></div>
