--- a/src/gouvernement.html
+++ b/src/gouvernement.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,7 +22,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="sheet">
       <h2>Gouvernement français actuel</h2>
       <h3>Président·e de la République</h3>
       <h3>Chef·fe du gouvernement</h3>
@@ -33,6 +34,6 @@
         <span class="sr-only">Drapeau français</span>
       </div>
     </footer>
-
   </body>
+
 </html>
