--- a/src/profil.html
+++ b/src/profil.html
@@ -88,6 +88,10 @@
           <h3>Partis politiques</h3>
           <ul data-key="profil-liste-partis"></ul>
         </div>
+        <div data-contains-slot="profil-formation">
+          <h3>Formation</h3>
+          <ul data-key="profil-formation"></ul>
+        </div>
         <div data-contains-slot="signature-personne">
           <h3>Signature</h3>
           <img class="signature" data-key="signature-personne" src="" alt="">
