--- a/src/gouvernement.html
+++ b/src/gouvernement.html
@@ -39,13 +39,15 @@
         padding-left: 1.5em;
       }
 
-      .gouvernement a {
-        color: black;
+      .gouvernement a.nom,
+      .gouvernement .nom a {
+        color: inherit !important;
         font-weight: bold;
       }
 
-      .gouvernement a:hover {
-        color: #000091;
+      .gouvernement a.nom:hover,
+      .gouvernement .nom a:hover {
+        color: #000091 !important;
         text-decoration-color: #000091;
       }
 
@@ -66,12 +68,18 @@
         border-radius: 5px;
         overflow: hidden;
         transition: all 500ms ease;
-        padding: 8px;
       }
 
       .liste-ministres li:hover {
         box-shadow: 0 3px 9px hsla(0, 0%, 0%, 0.2);
         transition: all 100ms ease;
+      }
+
+      .liste-ministres li>a {
+        padding: 8px;
+        display: block;
+        color: inherit !important;
+        text-decoration: none;
       }
 
     </style>
@@ -82,14 +90,14 @@
       <div data-contains-slot="president-lien">
         <h3>Président·e de la République</h3>
         <p class="president">
-          <a data-key="president-lien"></a> — <span data-key="president-info"></span>
+          <span class="nom" data-key="president-lien"></span> — <span data-key="president-info"></span>
         </p>
       </div>
 
       <div data-contains-slot="premier-ministre-lien">
         <h3>Chef·fe du gouvernement</h3>
         <p class="premier-ministre">
-          <a data-key="premier-ministre-lien"></a> — <span data-key="premier-ministre-info"></span>
+          <span class="nom" data-key="premier-ministre-lien"></span> — <span data-key="premier-ministre-info"></span>
         </p>
       </div>
 
