--- a/src/gouvernement.html
+++ b/src/gouvernement.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/typography.css" />
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/gouvernement.css" />
   </head>
 
   <body>
@@ -21,68 +22,6 @@
         <p class="h3">Le moteur de recherche de la politique française</p>
       </div>
     </header>
-
-    <style>
-      .gouvernement {
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-      }
-
-      h2 {
-        text-align: center;
-      }
-
-      .president,
-      .premier-ministre {
-        margin-top: 16px;
-        padding-left: 1.5em;
-      }
-
-      .gouvernement a.nom,
-      .gouvernement .nom a {
-        color: inherit !important;
-        font-weight: bold;
-      }
-
-      .gouvernement a.nom:hover,
-      .gouvernement .nom a:hover {
-        color: #000091 !important;
-        text-decoration-color: #000091;
-      }
-
-      .liste-ministres ul {
-        margin: 0;
-        padding: 0;
-        margin-top: 16px;
-
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
-        gap: 1em;
-      }
-
-      .liste-ministres li {
-        position: relative;
-        box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.2);
-        background-color: white;
-        border-radius: 5px;
-        overflow: hidden;
-        transition: all 500ms ease;
-      }
-
-      .liste-ministres li:hover {
-        box-shadow: 0 3px 9px hsla(0, 0%, 0%, 0.2);
-        transition: all 100ms ease;
-      }
-
-      .liste-ministres li>a {
-        padding: 8px;
-        display: block;
-        color: inherit !important;
-        text-decoration: none;
-      }
-
-    </style>
 
     <main class="sheet gouvernement">
       <h2>Gouvernement français actuel</h2>
@@ -112,11 +51,11 @@
         <span class="sr-only">Drapeau français</span>
       </div>
     </footer>
-  </body>
 
-  <script src="scripts/Slots.js"></script>
-  <script src="scripts/utils.js"></script>
-  <script src="scripts/requetes.js"></script>
-  <script src="scripts/gouvernement.js"></script>
+    <script src="scripts/Slots.js"></script>
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/requetes.js"></script>
+    <script src="scripts/gouvernement.js"></script>
+  </body>
 
 </html>
